--- a/4_vue-skillup/es6/package.json
+++ b/4_vue-skillup/es6/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "flush-promises": "^1.0.2",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0"
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "axios": "^0.19.0",
-    "babel-jest": "^24.9.0"
+    "babel-jest": "^25.1.0"
   }
 }
